--- a/Automation/log.html
+++ b/Automation/log.html
@@ -1799,25 +1799,25 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,20257],[],[[4,0,0,[],[1,892,19341],[[0,5,0,0,0,0,0,0,[1,902,19328],[[0,6,7,0,8,9,0,0,[1,902,0],[]],[0,10,7,0,11,12,0,0,[1,902,7670],[[8,902,2,13]]],[0,14,7,0,15,0,0,0,[1,8572,2183],[]],[0,16,7,0,17,18,0,0,[1,10756,2556],[[8,10757,2,19]]],[0,20,7,0,21,0,0,0,[1,13312,2665],[]],[0,22,7,0,23,0,0,0,[1,15977,4252],[]]]]]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,26015],[],[[4,0,0,[],[1,329,25673],[[0,5,6,0,7,8,0,0,[1,330,0],[]],[0,9,6,0,10,11,0,0,[1,331,6846],[[8,331,2,12]]],[0,13,6,0,14,0,0,0,[1,7178,2175],[]],[0,15,6,0,16,17,0,0,[1,9354,4078],[[8,9354,3,19]]],[0,15,6,0,16,20,0,0,[1,13433,4084],[[8,13433,3,19]]],[0,15,6,0,16,22,0,0,[1,17519,4196],[[8,17519,3,19]]],[0,24,6,0,25,0,0,0,[1,21716,4285],[]]]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Goto","*C:\\Users\\suhelk\\PycharmProjects\\Automation\\Automation\\Goto.robot","*Goto.robot","*Goto1","*Goto11","*Set Selenium Speed","*SeleniumLibrary","*<p>Sets the delay that is waited after each Selenium command.\x3c/p>","*2","*Open Browser","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${google}, ${driver}","*Opening browser 'chrome' to base url '<a href=\"https://www.google.com/\">https://www.google.com/\x3c/a>'.","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Go To","*<p>Navigates the current browser window to the provided <code>url\x3c/code>.\x3c/p>","*${bing}","*Opening url '<a href=\"https://www.bing.com/\">https://www.bing.com/\x3c/a>'","*Go Back","*<p>Simulates the user clicking the back button on their browser.\x3c/p>","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Keys","*C:\\Users\\suhelk\\PycharmProjects\\Automation\\Automation\\Keys.robot","*Keys.robot","*Test1","*Set Selenium Speed","*SeleniumLibrary","*<p>Sets the delay that is waited after each Selenium command.\x3c/p>","*2","*Open Browser","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${url}, ${Driver}","*Opening browser 'chrome' to base url '<a href=\"https://www.facebook.com/login/\">https://www.facebook.com/login/\x3c/a>'.","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Press Key","*<p><b>DEPRECATED in SeleniumLibrary 4.0.\x3c/b> use `Press Keys` instead.\x3c/p>","*css=#email, \\\\16","*s1-t1-k4","*Keyword 'SeleniumLibrary.Press Key' is deprecated. use `Press Keys` instead.","*css=#email, \\\\83","*s1-t1-k5","*css=button._42ft[type='submit'], \\\\13","*s1-t1-k6","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:19","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:20","fail":0,"id":"s1","label":"Goto","name":"Goto","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:26","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:26","fail":0,"id":"s1","label":"Keys","name":"Keys","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["errors"] = [];
+window.output["errors"] = [[8,9354,3,19,18],[8,13433,3,19,21],[8,17519,3,19,23]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1679160339668;
+window.output["baseMillis"] = 1682719244236;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 20322;
+window.output["generated"] = 26079;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
