--- a/Automation/report.html
+++ b/Automation/report.html
@@ -1628,22 +1628,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,20257],[],[[4,0,0,[],[1,892,19341],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,26015],[],[[4,0,0,[],[1,329,25673],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Goto","*C:\\Users\\suhelk\\PycharmProjects\\Automation\\Automation\\Goto.robot","*Goto.robot","*Goto1"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Keys","*C:\\Users\\suhelk\\PycharmProjects\\Automation\\Automation\\Keys.robot","*Keys.robot","*Test1"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:19","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:20","fail":0,"id":"s1","label":"Goto","name":"Goto","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:26","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:26","fail":0,"id":"s1","label":"Keys","name":"Keys","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1679160339668;
+window.output["baseMillis"] = 1682719244236;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 20322;
+window.output["generated"] = 26079;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
