--- a/Automation/results/log.html
+++ b/Automation/results/log.html
@@ -1799,31 +1799,31 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[1,0,320],[],[[5,0,0,[6],[1,312,0],[[0,7,8,0,9,10,0,0,[1,312,0],[]]]],[11,0,0,[12],[1,312,8],[[0,7,8,0,9,13,0,0,[1,320,0],[]]]],[14,0,0,[12],[1,320,0],[[0,7,8,0,9,15,0,0,[1,320,0],[]]]],[16,0,0,[6],[1,320,0],[[0,7,8,0,9,17,0,0,[1,320,0],[]]]]],[],[4,4,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,20180],[],[[4,0,0,[5],[1,529,19644],[[0,6,7,0,8,9,0,0,[1,530,0],[]],[0,10,7,0,11,12,0,0,[1,531,13064],[[8,532,2,13]]],[0,14,7,0,15,0,0,0,[1,13597,2245],[]],[0,16,0,0,0,0,0,0,[1,15844,4327],[[0,17,7,0,18,19,0,0,[1,15845,4325],[[8,15846,2,20]]]]]]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tags","*C:\\Users\\suhelk\\PycharmProjects\\Automation\\Automation\\tags.robot","*../tags.robot","*<p>Tags in Robot Framework\x3c/p>","*Test Case 1","*Smoke","*Log To Console","*BuiltIn","*<p>Logs the given message to the console.\x3c/p>","*This is test case 1","*Test Case 2","*Regression","*This is test case 2","*Test Case 3","*This is test case 3","*Test Case 4","*This is test case 4"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Mouse Actions","*C:\\Users\\suhelk\\PycharmProjects\\Automation\\Automation\\mouse_actions.robot","*../mouse_actions.robot","*mouse121","*Tag2","*Set Selenium Speed","*SeleniumLibrary","*<p>Sets the delay that is waited after each Selenium command.\x3c/p>","*2","*Open Browser","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${url}, ${chrome}","eNqtzEEOAiEMAMCvNGsMJ6nxaNZNPHj2DQUqbAKULRi+7yecB8y7cd1rBKcyOysYn1QKGxgCjjrDVzOYlSApfx5LGqP1O+Kc08YsjnI/yHopGLjIpe+DMShFqiGoNDw9vec2OJxv11fmwnX0ZfvHsiJtxv4Ap5REDw==","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*mouseover1","*Mouse Over","*<p>Simulates hovering the mouse over the element <code>locator\x3c/code>.\x3c/p>","*<a href=\"xpath://*[@id=&quot;menu-item-2804&quot;]/a/span[2\">xpath://*[@id=\"menu-item-2804\"]/a/span[2\x3c/a>]","*Simulating Mouse Over on element '<a href=\"xpath://*[@id=&quot;menu-item-2804&quot;]/a/span[2\">xpath://*[@id=\"menu-item-2804\"]/a/span[2\x3c/a>]'."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":4,"skip":0}],[{"elapsed":"00:00:00","fail":0,"label":"Regression","pass":2,"skip":0},{"elapsed":"00:00:00","fail":0,"label":"Smoke","pass":2,"skip":0}],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"Tags","name":"Tags","pass":4,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:20","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:20","fail":0,"label":"Tag2","pass":1,"skip":0}],[{"elapsed":"00:00:20","fail":0,"id":"s1","label":"Mouse Actions","name":"Mouse Actions","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1679159176567;
+window.output["baseMillis"] = 1682717836287;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 347;
+window.output["generated"] = 20282;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
 </script>
 <script type="text/javascript">
-window.settings = {"defaultLevel":"INFO","minLevel":"NONE","reportURL":"report.html","rpa":false,"splitLogBase":"log","title":""};
+window.settings = {"defaultLevel":"INFO","minLevel":"INFO","reportURL":"report.html","rpa":false,"splitLogBase":"log","title":""};
 </script>
 <title></title>
 </head>
