--- a/Automation/results/report.html
+++ b/Automation/results/report.html
@@ -1628,22 +1628,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[1,0,320],[],[[5,0,0,[6],[1,312,0],[]],[7,0,0,[8],[1,312,8],[]],[9,0,0,[8],[1,320,0],[]],[10,0,0,[6],[1,320,0],[]]],[],[4,4,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,20180],[],[[4,0,0,[5],[1,529,19644],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tags","*C:\\Users\\suhelk\\PycharmProjects\\Automation\\Automation\\tags.robot","*../tags.robot","*<p>Tags in Robot Framework\x3c/p>","*Test Case 1","*Smoke","*Test Case 2","*Regression","*Test Case 3","*Test Case 4"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Mouse Actions","*C:\\Users\\suhelk\\PycharmProjects\\Automation\\Automation\\mouse_actions.robot","*../mouse_actions.robot","*mouse121","*Tag2"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":4,"skip":0}],[{"elapsed":"00:00:00","fail":0,"label":"Regression","pass":2,"skip":0},{"elapsed":"00:00:00","fail":0,"label":"Smoke","pass":2,"skip":0}],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"Tags","name":"Tags","pass":4,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:20","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:20","fail":0,"label":"Tag2","pass":1,"skip":0}],[{"elapsed":"00:00:20","fail":0,"id":"s1","label":"Mouse Actions","name":"Mouse Actions","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1679159176567;
+window.output["baseMillis"] = 1682717836287;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 347;
+window.output["generated"] = 20282;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
