--- a/Automation/report.html
+++ b/Automation/report.html
@@ -1628,22 +1628,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,26015],[],[[4,0,0,[],[1,329,25673],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,27298],[],[[4,0,0,[],[1,343,26946],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Keys","*C:\\Users\\suhelk\\PycharmProjects\\Automation\\Automation\\Keys.robot","*Keys.robot","*Test1"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Call From Resource","*C:\\Users\\suhelk\\PycharmProjects\\Automation\\Automation\\call from resource.robot","*call%20from%20resource.robot","*call_from_resources"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:26","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:26","fail":0,"id":"s1","label":"Keys","name":"Keys","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:27","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:27","fail":0,"id":"s1","label":"Call From Resource","name":"Call From Resource","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1682719244236;
+window.output["baseMillis"] = 1682791212528;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 26079;
+window.output["generated"] = 27358;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
