--- a/Resources/log.html
+++ b/Resources/log.html
@@ -1799,25 +1799,25 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,27298],[],[[4,0,0,[],[1,343,26946],[[0,5,6,0,0,0,0,0,[1,344,10455],[[0,7,8,0,9,10,0,0,[1,344,0],[]],[0,11,8,0,12,13,0,0,[1,344,8282],[[8,345,2,14]]],[0,15,8,0,16,0,0,0,[1,8627,2172],[]]]],[0,17,18,0,19,10,0,0,[1,10800,2008],[[8,12808,2,20]]],[0,21,8,0,22,23,0,0,[1,12808,8299],[[8,12809,2,24]]],[0,17,18,0,19,10,0,0,[1,21109,2015],[[8,23124,2,20]]],[0,25,8,0,26,0,0,0,[1,23125,4162],[]]]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,11139],[],[[4,0,0,[],[1,320,10815],[[0,5,0,0,0,0,0,0,[1,321,10813],[[0,6,7,0,8,9,0,0,[1,322,0],[]],[0,10,7,0,11,12,0,0,[1,322,8668],[[8,322,2,13]]],[0,14,7,0,15,0,0,0,[1,8990,2144],[]]]]]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Call From Resource","*C:\\Users\\suhelk\\PycharmProjects\\Automation\\Automation\\call from resource.robot","*call%20from%20resource.robot","*call_from_resources","*without keyword","*Resources1","*Set Selenium Speed","*SeleniumLibrary","*<p>Sets the delay that is waited after each Selenium command.\x3c/p>","*2","*Open Browser","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${url}, ${browser}","*Opening browser 'chrome' to base url '<a href=\"https://www.thetestingworld.com/\">https://www.thetestingworld.com/\x3c/a>'.","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Sleep","*BuiltIn","*<p>Pauses the test executed for the given time.\x3c/p>","*Slept 2 seconds","*Click Link","*<p>Clicks a link identified by <code>locator\x3c/code>.\x3c/p>","*<a href=\"xpath://*[@id=&quot;ja-search&quot;]/ul/li/a\">xpath://*[@id=\"ja-search\"]/ul/li/a\x3c/a>","*Clicking link '<a href=\"xpath://*[@id=&quot;ja-search&quot;]/ul/li/a\">xpath://*[@id=\"ja-search\"]/ul/li/a\x3c/a>'.","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Resources1","*C:\\Users\\suhelk\\PycharmProjects\\Automation\\Resources\\Resources1.robot","*Resources1.robot","*without keyword1","*without keyword","*Set Selenium Speed","*SeleniumLibrary","*<p>Sets the delay that is waited after each Selenium command.\x3c/p>","*2","*Open Browser","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${url}, ${browser}","*Opening browser 'chrome' to base url '<a href=\"https://www.thetestingworld.com/\">https://www.thetestingworld.com/\x3c/a>'.","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:27","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:27","fail":0,"id":"s1","label":"Call From Resource","name":"Call From Resource","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:11","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:11","fail":0,"id":"s1","label":"Resources1","name":"Resources1","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1682791212528;
+window.output["baseMillis"] = 1682791112559;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 27358;
+window.output["generated"] = 11165;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
