--- a/Automation/report.html
+++ b/Automation/report.html
@@ -1628,22 +1628,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[1,0,302],[],[[5,0,0,[6,7],[1,297,3],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,4,[],[1,0,51626],[],[[5,0,6,[],[1,431,51191],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tags","*C:\\Users\\suhelk\\PycharmProjects\\Automation\\Automation\\Tags.robot","*Tags.robot","*<p>Tags in Robot Framework\x3c/p>","*Test Case 3","*for","*Regression"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Fetch resource data","*C:\\Users\\suhelk\\PycharmProjects\\Automation\\Automation\\Fetch_resource_data.robot","*Fetch_resource_data.robot","*<p>This is resouce file\x3c/p>","*give_values","*<p>This is giving values in the field\x3c/p>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:00","fail":0,"label":"for","pass":1,"skip":0},{"elapsed":"00:00:00","fail":0,"label":"Regression","pass":1,"skip":0}],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"Tags","name":"Tags","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:51","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:52","fail":0,"id":"s1","label":"Fetch resource data","name":"Fetch resource data","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1682976731430;
+window.output["baseMillis"] = 1683747379859;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 329;
+window.output["generated"] = 51690;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
